--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,13 @@
 [tool.poetry]
 name = "gentimer"
-version = "0.1.0"
-url = "https://github.com/teamikl/gentimer"
+version = "0.1.1"
+repository = "https://github.com/teamikl/gentimer"
 description = "Utility to make generator to be consumed in event-loop timer"
 authors = ["teamikl"]
 license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-darglint = "^1.7.0"
 
 [tool.poetry.dev-dependencies]
 flake8-docstrings = "^1.5.0"
@@ -20,6 +19,7 @@ sphinx = "^3.5.2"
 PyQt5 = "^5.15.3"
 wxPython = "^4.1.1"
 sphinx_rtd_theme = "^0.5.1"
+darglint = "^1.7.0"
 
 [tool.pytest.ini_options]
 filterwarnings = "ignore::DeprecationWarning:pyreadline.*:"
